Apply automated "c-style array" refactoring